--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.com.wym= debug
 logging.pattern.dateformat=HH:mm:ss
+
+knife4j.enable=true
+knife4j.openapi.title=wym
+knife4j.openapi.description="wym"
+knife4j.openapi.email=2019057903@qq.com
+knife4j.openapi.concat=wym
+knife4j.openapi.url=https://www.itcast.cn
+knife4j.openapi.version=v1.0.0
+knife4j.openapi.group.default.group-name=default
+knife4j.openapi.group.default.api-rule=package
+knife4j.openapi.group.default.api-rule-resources=com.wym.mp.controller
+
+mybatis-plus.type-aliases-package=com.wym.mp.domain.pojo
+mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
