--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ knife4j.openapi.group.default.api-rule-resources=com.wym.mp.controller
 
 mybatis-plus.type-aliases-package=com.wym.mp.domain.pojo
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
+
+
+# ?? SpringDoc ??
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
